Updated the search results and the collections views' sort menu elements to not line break until they are stacked, to prevent misalignment on narrow desktop screen width

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1098,6 +1098,10 @@ div.search-results-menu > div {
   display: inline-block;
 }
 
+span.search-results-menu-group {
+  display: inline-block;
+}
+
 div.search-results-menu-element {
   margin-left: 20px;
   margin-top: 10px;
